Prototyping with TypeScript.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=sprint01
 spring.datasource.url=jdbc:mysql://localhost:3306/sprint01_java
-spring.datasource.username=root
-spring.datasource.password=thinh
+spring.datasource.username=thinhcc
+spring.datasource.password=test
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
