--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
     "react-router-dom": "^7.5.1"
   },
   "devDependencies": {
