--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=flight-management-system
 spring.datasource.url=jdbc:mysql://localhost:3306/fms_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=thinhcc
-spring.datasource.password=test
+spring.datasource.username=thinh
+spring.datasource.password=thinh
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
@@ -33,7 +33,7 @@ server.error.include-stacktrace=never
 server.error.include-exception=false
 
 # Cross-Origin Configuration - More restrictive for production
-spring.web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173}
+spring.web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:3001,http://localhost:5173}
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=Authorization,Content-Type,X-Requested-With
 spring.web.cors.allow-credentials=true
@@ -111,7 +111,7 @@ logging.level.com.flightmanagement=INFO
 # spring.h2.console.enabled=true
 
 # CORS for frontend demos
-spring.web.cors.allowed-origins=http://localhost:3000,http://localhost:5173,http://localhost:8081
+spring.web.cors.allowed-origins=http://localhost:3000,http://localhost:3001,http://localhost:5173,http://localhost:8081
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
