--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
@@ -33,7 +33,7 @@ server.error.include-stacktrace=never
 server.error.include-exception=false
 
 # Cross-Origin Configuration - More restrictive for production
-spring.web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:3001,http://localhost:5173}
+spring.web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173}
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=Authorization,Content-Type,X-Requested-With
 spring.web.cors.allow-credentials=true
@@ -41,7 +41,7 @@ spring.web.cors.max-age=3600
 
 # JSON Configuration
 spring.jackson.time-zone=UTC
-spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.date-format=yyyy-MM-dd HH:mm
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.fail-on-empty-beans=false
 
@@ -104,21 +104,3 @@ app.ticket.payment-timeout-minutes=30
 spring.profiles.active=demo
 spring.jpa.show-sql=false
 logging.level.com.flightmanagement=INFO
-
-# Demo Database (consider H2 for easy demo)
-# spring.datasource.url=jdbc:h2:mem:fms_demo
-# spring.datasource.driver-class-name=org.h2.Driver
-# spring.h2.console.enabled=true
-
-# CORS for frontend demos
-spring.web.cors.allowed-origins=http://localhost:3000,http://localhost:3001,http://localhost:5173,http://localhost:8081
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
-spring.web.cors.allowed-headers=*
-spring.web.cors.allow-credentials=true
-
-# Disable security for demo
-app.demo.security.enabled=false
-
-# Demo data configuration
-app.demo.initialize-data=true
-app.demo.create-sample-flights=true
