--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 spring.application.name=flight-management-system
-spring.datasource.url=jdbc:mysql://localhost:3306/fms_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/fms_db
 spring.datasource.username=root
 spring.datasource.password=user
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Logging Configuration
+logging.file.name=logs/application.log
+logging.level.root=INFO
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %level - %msg%n
+
 # JPA/Hibernate Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=validate
+# spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
