--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=flight-management-system
 spring.datasource.url=jdbc:mysql://localhost:3306/fms_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=thinh
+spring.datasource.username=user
 spring.datasource.password=thinh
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
