--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=flight-management-system
-spring.datasource.url=jdbc:mysql://localhost:3306/fms_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=user
+spring.datasource.url=jdbc:mysql://localhost:3306/fms_db?useSSL=false&serverTimezone=Asia/Ho_Chi_Minh&allowPublicKeyRetrieval=true
+spring.datasource.username=root
 spring.datasource.password=thinh
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# NOTE: If you see "Access denied for user", verify that the username/password are correct,
+# and that the MySQL user 'user' has privileges on the 'fms_db' database.
 
 # JPA/Hibernate Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -26,8 +28,6 @@ logging.level.org.springframework.security=INFO
 
 # Server Configuration
 server.port=8080
-server.servlet.context-path=/
-server.error.include-message=never
 server.error.include-binding-errors=never
 server.error.include-stacktrace=never
 server.error.include-exception=false
