--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=flight-management-system
 spring.datasource.url=jdbc:mysql://localhost:3306/fms_db?useSSL=false&serverTimezone=Asia/Ho_Chi_Minh&allowPublicKeyRetrieval=true
-spring.datasource.username=root
+spring.datasource.username=thinh
 spring.datasource.password=thinh
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # NOTE: If you see "Access denied for user", verify that the username/password are correct,
