overwrite log file everytime compile

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,10 +4,8 @@ spring.datasource.username=root
 spring.datasource.password=user
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Logging Configuration
-logging.file.name=logs/application.log
-logging.level.root=INFO
-logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %level - %msg%n
+# Logging Configuration - Use custom logback config (no .gz files)
+logging.config=classpath:logback-spring.xml
 
 # JPA/Hibernate Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -21,13 +19,6 @@ spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.connection-timeout=20000
-
-# Logging Configuration - Reduce verbosity for production
-logging.level.com.flightmanagement=INFO
-logging.level.org.springframework.web=WARN
-logging.level.org.hibernate.SQL=WARN
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
-logging.level.org.springframework.security=INFO
 
 # Server Configuration
 server.port=8080
@@ -107,5 +98,3 @@ app.ticket.payment-timeout-minutes=30
 
 # Demo Environment Settings
 spring.profiles.active=demo
-spring.jpa.show-sql=false
-logging.level.com.flightmanagement=INFO
