--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -32,12 +32,6 @@ server.error.include-binding-errors=never
 server.error.include-stacktrace=never
 server.error.include-exception=false
 
-# Cross-Origin Configuration - More restrictive for production
-spring.web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173}
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=Authorization,Content-Type,X-Requested-With
-spring.web.cors.allow-credentials=true
-spring.web.cors.max-age=3600
 
 # JSON Configuration
 spring.jackson.time-zone=UTC
@@ -48,14 +42,10 @@ spring.jackson.serialization.fail-on-empty-beans=false
 # Security Configuration - Use environment variables
 jwt.secret=${JWT_SECRET:mySecretKeyForDevelopmentOnlyChangeInProduction}
 jwt.expiration=${JWT_EXPIRATION:86400000}
-jwt.refresh-expiration=${JWT_REFRESH_EXPIRATION:604800000}
 
 # File Upload Configuration
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-
-# WebSocket Configuration
-spring.websocket.allowed-origins=http://localhost:3000,http://localhost:5173
 
 # Email Configuration (for notifications)
 spring.mail.host=smtp.gmail.com
@@ -69,38 +59,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.cache.type=simple
 spring.cache.cache-names=airports,flights,planes,passengers,ticket-classes,flight-ticket-classes,parameters
 
-# Actuator Configuration
-management.endpoints.web.exposure.include=health,info
-management.endpoint.health.show-details=never
-management.endpoint.health.show-components=never
-management.endpoints.web.base-path=/actuator
-management.server.port=8081
-
-# Flight Management System Configuration
-app.flight.booking-advance-hours=4
-app.flight.max-layover-hours=12
-app.flight.min-layover-minutes=30
-app.flight.max-medium-airports=2
-app.flight.min-flight-duration=30
-app.flight.max-booking-hold-hours=24
-
-# Business Rules Configuration
-app.parameter.default.max-medium-airport=2
-app.parameter.default.min-flight-duration=30
-app.parameter.default.min-layover-duration=30
-app.parameter.default.max-layover-duration=720
-app.parameter.default.min-booking-in-advance-duration=4
-app.parameter.default.max-booking-hold-duration=24
-
-# Chat System Configuration
-app.chat.max-message-length=1000
-app.chat.session-timeout-minutes=30
-
-# Ticket Configuration
-app.ticket.hold-duration-minutes=15
-app.ticket.payment-timeout-minutes=30
-
 # Demo Environment Settings
-spring.profiles.active=demo
-spring.jpa.show-sql=false
-logging.level.com.flightmanagement=INFO
+spring.profiles.active=dev
