--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=flight-management-system
-spring.datasource.url=jdbc:mysql://localhost:3306/fms_db?useSSL=false&serverTimezone=Asia/Ho_Chi_Minh&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/fms_db?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=thinh
 spring.datasource.password=thinh
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -42,6 +42,7 @@ spring.jackson.serialization.fail-on-empty-beans=false
 # Security Configuration - Use environment variables
 jwt.secret=${JWT_SECRET:mySecretKeyForDevelopmentOnlyChangeInProduction}
 jwt.expiration=${JWT_EXPIRATION:86400000}
+jwt.refresh-expiration=604800000
 
 # File Upload Configuration
 spring.servlet.multipart.max-file-size=10MB
