--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -35,22 +35,11 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.fail-on-empty-beans=false
 
-# Security Configuration - Use environment variables
-jwt.secret=${JWT_SECRET:mySecretKeyForDevelopmentOnlyChangeInProduction}
-jwt.expiration=${JWT_EXPIRATION:86400000}
-jwt.refresh-expiration=604800000
+
 
 # File Upload Configuration
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-
-# Email Configuration (for notifications)
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${EMAIL_USERNAME:}
-spring.mail.password=${EMAIL_PASSWORD:}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Cache Configuration
 spring.cache.type=simple
@@ -58,3 +47,6 @@ spring.cache.cache-names=airports,flights,planes,passengers,ticket-classes,fligh
 
 # Demo Environment Settings
 spring.profiles.active=dev
+
+jwt.password-reset.secret=your-256-bit-secret-here
+jwt.password-reset.expiration-min=15
