--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -9,9 +9,9 @@ vnpay.secret-key= PDYP8QNFRKPY1Z63QIMXVQBWVN9O9R7J
 vnpay.api-url=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://mysql-thinh-qltv-thinh-001.g.aivencloud.com:21179/fms_db?ssl-mode=REQUIRED
-spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_312mxDsjOCT1h87P2vs
+#spring.datasource.url=jdbc:mysql://mysql-thinh-qltv-thinh-001.g.aivencloud.com:21179/fms_db?ssl-mode=REQUIRED
+#spring.datasource.username=avnadmin
+#spring.datasource.password=AVNS_312mxDsjOCT1h87P2vs
 
 # Security Configuration - Use environment variables
 jwt.secret=${JWT_SECRET:mySecretKeyForDevelopmentOnlyChangeInProduction}
