--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,105 @@
-﻿# General
-*.log
-.DS_Store
+﻿# Build outputs
+target/
+build/
+bin/
+out/
+dist/
+dist-ssr/
+release/
+*.class
+*.jar
+*.war
+*.ear
+*.nar
 
-# Frontend
+# IDEs
+.idea/
+*.iml
+*.ipr
+*.iws
+.vscode/
+!.vscode/extensions.json
+.settings/
+.classpath
+.project
+.factorypath
+.springBeans
+.sts4-cache
+nbproject/
+nbproject/private/
+nbbuild/
+nbdist/
+.nb-gradle/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Maven
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+pom.xml.bak
+.mvn/timing.properties
+!.mvn/wrapper/maven-wrapper.jar
+.apt_generated
+
+# Gradle
+.gradle/
+.gradletasknamecache
+gradle-app.setting
+!gradle-wrapper.jar
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+.npm
+.yarn-integrity
+
+# Logs
+*.log
+logs/
+
+# Environment files
+.env
+.env.test
+*.local
+application-dev.properties
+application-prod.properties
+
+# OS files
+.DS_Store
+.DS_Store?
+Thumbs.db
+ehthumbs.db
+*~
+.directory
+.Trash-*
+
+# Mobile development
+*.apk
+*.aab
+*.dex
+google-services.json
+Pods/
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+temp/
+tmp/
+
+# Documentation
+HELP.md
+
+# Project-specific paths
 frontend/logs
 frontend/npm-debug.log*
 frontend/yarn-debug.log*
@@ -21,7 +118,6 @@ frontend/*.njsproj
 frontend/*.sln
 frontend/*.sw?
 
-# Backend
 backend/HELP.md
 backend/target/
 backend/!.mvn/wrapper/maven-wrapper.jar
@@ -47,3 +143,11 @@ backend/build/
 backend/!**/src/main/**/build/
 backend/!**/src/test/**/build/
 backend/.vscode/
+backend/src/main/resources/application-dev.properties
+backend/src/main/resources/application-prod.properties
+
+# Keep important files
+!**/src/main/**/target/
+!**/src/test/**/target/
+!**/src/main/**/build/
+!**/src/test/**/build/
