--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -30,10 +30,10 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
-        <dependency> 
-            <groupId>jakarta.validation</groupId> 
-            <artifactId>jakarta.validation-api</artifactId> 
-            <version>3.0.2</version> 
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.0.2</version>
         </dependency>
         <dependency>
             <groupId>jakarta.validation</groupId>
@@ -93,6 +93,10 @@
             <artifactId>jjwt-impl</artifactId>
             <version>0.12.6</version>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
