--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,8 @@
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^6.28.0",
     "react-time-picker": "^7.0.0",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "recharts": "^2.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
