feat: update employee registration roles and add Excel import/export functionality
- Changed authorization role for employee creation from EMPLOYEE_ACCOUNTING to EMPLOYEE_HUMAN_RESOURCES.
- Enhanced EmployeeMapper to include citizenId in the DTO.
- Added email existence check in AuthService during employee registration.
- Updated package-lock.json to include xlsx library for Excel file handling.
- Modified EmployeeManagement component to support importing and exporting employee data via Excel.
- Implemented validation for imported Excel data and provided user feedback for import results.
- Removed the EmployeeTable component as its functionality is integrated into EmployeeManagement.
- Updated RegisterRequest interface to make password optional for employee registration.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,8 @@
     "react-time-picker": "^7.0.0",
     "react-toastify": "^10.0.4",
     "recharts": "^2.15.3",
-    "sockjs-client": "^1.6.1"
+    "sockjs-client": "^1.6.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -42,6 +43,7 @@
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "@types/sockjs-client": "^1.5.4",
+    "@types/xlsx": "^0.0.36",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^2.1.8",
     "@vitest/ui": "^2.1.8",
