Added new data script

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,9 +1,12 @@
 # Development environment settings
 # WARNING: Never commit this file with real credentials
+spring.datasource.username=thinh
+spring.datasource.password=thinh
+
 
 # VNPAY Configuration for development
 vnpay.pay-url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-vnpay.return-url=http://localhost:3000/payment/result
+vnpay.return-url=http://localhost:3000/payment-result
 vnpay.tmn-code=BTTCT8OS
 vnpay.secret-key= PDYP8QNFRKPY1Z63QIMXVQBWVN9O9R7J
 vnpay.api-url=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
@@ -22,8 +25,8 @@ jwt.refresh-expiration=604800000
 # Email Configuration (for notifications)
 spring.mail.host=mail.thinhuit.id.vn
 spring.mail.port=587
-spring.mail.username=no-reply@thinhuit.id.vn
-spring.mail.password=123Abc
+spring.mail.username=customer-support@thinhuit.id.vn
+spring.mail.password=3QrsqG4JqjXyYKWZffSE
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
@@ -32,4 +35,4 @@ spring.mail.properties.mail.smtp.ssl.trust=mail.thinhuit.id.vn
 spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 
 # For application.properties
-app.frontend.url=http://localhost:3000/reset-password/
+app.frontend.url=http://localhost:3000
