--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -31,7 +31,7 @@ server.error.include-exception=false
 
 # JSON Configuration
 spring.jackson.time-zone=UTC
-spring.jackson.date-format=yyyy-MM-dd HH:mm
+spring.jackson.date-format=dd-MM-yyyy HH:mm:ss
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.fail-on-empty-beans=false
 
