BE: refactor(controller): convert all fields injection to constructor injection for easier debugging

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 # Development environment settings
 # WARNING: Never commit this file with real credentials
-spring.datasource.username=thinh
-spring.datasource.password=thinh
+spring.datasource.username=root
+spring.datasource.password=octguy
 
 
 # VNPAY Configuration for development
