--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=flight-management-system
 spring.datasource.url=jdbc:mysql://localhost:3306/fms_db
 spring.datasource.username=root
-spring.datasource.password=thinh
+spring.datasource.password=octguy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Logging Configuration - Use custom logback config (no .gz files)
