refactor: standardize API responses across controllers using ApiResponse class

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -50,3 +50,14 @@ spring.profiles.active=dev
 
 jwt.password-reset.secret=your-256-bit-secret-here
 jwt.password-reset.expiration-min=15
+
+spring.mail.host=mail.thinhuit.id.vn
+spring.mail.port=587
+spring.mail.username=customer-support@thinhuit.id.vn
+spring.mail.password=3QrsqG4JqjXyYKWZffSE
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.ssl.trust=mail.thinhuit.id.vn
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
