--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^7.1.7",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "recharts": "^2.15.3"
   }
 }
