--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,5 +1,6 @@
 # Development environment settings
 # WARNING: Never commit this file with real credentials
+#spring.datasource.url=jdbc:mysql://localhost:3306/fms_db
 spring.datasource.username=root
 spring.datasource.password=octguy
 
