--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,10 +52,10 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "jsdom": "^25.0.1",
+    "recharts": "^2.15.3",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^7.1.7",
-    "vitest": "^3.2.4",
-    "recharts": "^2.15.3"
+    "vitest": "^3.2.4"
   }
 }
