--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 # Development environment settings
 # WARNING: Never commit this file with real credentials
 #spring.datasource.url=jdbc:mysql://localhost:3306/fms_db
-spring.datasource.username=root
-spring.datasource.password=octguy
+spring.datasource.username=thinh
+spring.datasource.password=thinh
 
 
 # VNPAY Configuration for development
