--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,28 +1,8 @@
 # Development environment settings
 # WARNING: Never commit this file with real credentials
 #spring.datasource.url=jdbc:mysql://localhost:3306/fms_db
-spring.datasource.username=thinh
-spring.datasource.password=thinh
-
-# MoMo Configuration for development
-momo.return-url=http://localhost:3000/payment-result
-momo.notify-url=http://localhost:8080/api/payment/IPN
-momo.environment=dev
-
-# Payment Gateway Selection (momo or vnpay)
-payment.gateway=momo
-
-# VNPAY Configuration for development (keeping for reference/backup)
-# vnpay.pay-url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-# vnpay.return-url=http://localhost:3000/payment-result
-# vnpay.tmn-code=BTTCT8OS
-# vnpay.secret-key= PDYP8QNFRKPY1Z63QIMXVQBWVN9O9R7J
-# vnpay.api-url=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
-
-# Database Configuration
-#spring.datasource.url=jdbc:mysql://mysql-thinh-qltv-thinh-001.g.aivencloud.com:21179/fms_db?ssl-mode=REQUIRED
-#spring.datasource.username=avnadmin
-#spring.datasource.password=AVNS_312mxDsjOCT1h87P2vs
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:thinh}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:thinh}
 
 # Security Configuration - Use environment variables
 jwt.secret=${JWT_SECRET:mySecretKeyForDevelopmentOnlyChangeInProduction}
@@ -33,9 +13,9 @@ jwt.refresh-expiration=604800000
 # Google SMTP Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=xuanthinh2207@gmail.com
+spring.mail.username=${SUPPORT_EMAIL}
 # This must be an App Password, NOT your login password (see below)
-spring.mail.password=xtptadfyqpiafuiz
+spring.mail.password=${APP_PASSWORD}
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
