--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,25 +1,17 @@
-spring.application.name=flight-management-system
-spring.datasource.url=jdbc:mysql://localhost:3306/fms_db
-spring.datasource.username=thinh
-spring.datasource.password=thinh
+# Database config
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Env import
 spring.config.import=optional:file:.env[.properties]
 
 # JPA/Hibernate Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-# spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
-logging.level.org.hibernate.SQL=OFF
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=OFF
-logging.level.org.hibernate=WARN
-
-# Connection Pool Configuration
-spring.datasource.hikari.maximum-pool-size=20
-spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.idle-timeout=300000
-spring.datasource.hikari.connection-timeout=20000
 
 # Server Configuration
 server.port=8080
@@ -27,14 +19,11 @@ server.error.include-binding-errors=never
 server.error.include-stacktrace=never
 server.error.include-exception=false
 
-
 # JSON Configuration
 spring.jackson.time-zone=UTC
 spring.jackson.date-format=dd-MM-yyyy HH:mm:ss
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.fail-on-empty-beans=false
-
-
 
 # File Upload Configuration
 spring.servlet.multipart.max-file-size=10MB
@@ -44,8 +33,25 @@ spring.servlet.multipart.max-request-size=10MB
 spring.cache.type=simple
 spring.cache.cache-names=airports,flights,planes,passengers,ticket-classes,flight-ticket-classes,parameters
 
-# Demo Environment Settings
-spring.profiles.active=dev
+# Security Configuration - Use environment variables
+jwt.secret=${SPRING_JWT_SECRET_KEY}
+jwt.password-reset.secret=${JWT_PASSWORD_SECRET}
+jwt.expiration=${SPRING_JWT_SECRET_KEY_EXPIRATION}
+jwt.refresh-expiration=${REFRESH_TOKEN_EXPIRATION}
+jwt.password-reset.expiration-min=${RESET_PASSWORD_TOKEN_EXPIRATION}
 
-jwt.password-reset.secret=your-256-bit-secret-here
-jwt.password-reset.expiration-min=15
+# Google SMTP Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${SUPPORT_EMAIL}
+spring.mail.password=${APP_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+# Recommended settings for Gmail
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+# Frontend URL Configuration
+app.frontend.url=${FRONTEND_URL}
